--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "devStart": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "bcrypt": "^6.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "method-override": "^3.0.0",
     "prisma": "^6.7.0"
   },
   "devDependencies": {
